[package]
name = "fractal"
version = "0.3.0"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/markov-chain/fractal"
homepage = "https://github.com/markov-chain/fractal"
documentation = "https://markov-chain.github.io/fractal"
description = """
The package provides a multiscale modeling framework for the analysis and
synthesis of positive-valued, long-range-dependent processes."""

[dependencies]
dwt = "*"
probability = "*"
random = "*"
statistics = "*"

[dev-dependencies]
assert = "*"
